--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Podekex</title>
-    <link rel="stylesheet" href="./styles.css" />
+    <title>Pokedex</title>
 
+    <link rel="stylesheet" href="./styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -15,6 +15,8 @@
     />
   </head>
   <body>
+    <div class="pokemonList"></div>
+
     <script src="./script.js"></script>
   </body>
 </html>
